@@ -1,3 +1,8 @@
+2026-02-17
+
+- Changed server's request log format
+- Minor script optimizations with thread and process handling
+
 2026-02-02
 
 - Fixed output console issues with macOS operating system:
